--- a/docs/pcstyles.css
+++ b/docs/pcstyles.css
@@ -6,7 +6,6 @@ body, h1, h2, h3, p, ul, li {
 }
 
 body {
-    /*font-family: Arial, sans-serif;*/
     background-color: #f7fefd;
     line-height: 1.6;
 }
@@ -69,7 +68,7 @@ section {
 }
 
 #about,#contact{
-    padding: 50px 120px;
+    padding: 50px 10%;
 }
 
 .project {
@@ -89,16 +88,23 @@ section {
     padding: 50px;
 }
 
+.about_contents2
+{
+    background-color: pink;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    grid-gap: 20px;
+}
+
 /*ホバーしたら*/
 .child1 {
-    background-color: aqua;
     cursor: pointer;
     max-width: 1000px;
     max-height:750px;
     position: relative;
     width: 100%;
     height: 97.5%;
-
   }
   .child1 img {
     width: 100%;
@@ -121,6 +127,7 @@ section {
     top: 0;
     transition: opacity .6s ease; /* ゆっくりopacityのみへ変化させる */
     width: 100%;
+    
   }
   .hover-mask:hover {
     opacity: 1; /* hoverしたら透過しない(表示させる) */
@@ -273,8 +280,8 @@ a[target=_blank]{
   
   .btn {
 	position: relative;
-	width: 80px;
-	height: 100px;
+	width: 80%;
+	height: 500px;
 	margin: 0 auto;
 	display: block;
 	/*border-radius: 12px;*/
