--- a/docs/pcstyles.css
+++ b/docs/pcstyles.css
@@ -279,7 +279,7 @@ a[target=_blank]{
   
   .btn {
 	position: relative;
-	width: 80%;
+	width: 100%;
 	height: 500px;
 	margin: 0 auto;
 	display: block;
@@ -300,4 +300,58 @@ a[target=_blank]{
 }
 .btn:hover img:nth-of-type(2) {
 	opacity: 0;
+}
+
+
+
+
+/*==================================================
+スライダーのためのcss
+===================================*/
+/*画像の横幅を100%にしてレスポンシブ化*/
+
+
+.gallery img{
+    margin: auto;
+	height: auto;
+	vertical-align: bottom;/*画像の下にできる余白を削除*/
+    width: 50%;
+}
+
+.choice-btn li img{
+    margin: auto;
+	width: 100%;
+	height: auto;
+	vertical-align: bottom;/*画像の下にできる余白を削除*/
+}
+
+.gallery li{
+    text-align: center;
+    list-style:none;
+    margin-bottom: 20px;
+}
+
+/*選択するサムネイル画像の設定*/
+
+.choice-btn li{
+    margin-bottom: 150px;
+    text-align: center;
+	cursor: pointer;
+	outline: none;
+	width: 5px;;
+    list-style:none;
+}
+.choice-btn li img{  
+	opacity: 0.4;/*選択されていないものは透過40%*/
+}
+
+.choice-btn li.slick-current img{
+	opacity: 1;/*選択されているものは透過しない*/
+}
+
+
+/*I'll decide*/
+#Illdecide
+{
+    background-color: aqua;
 }
