--- a/docs/pcstyles.css
+++ b/docs/pcstyles.css
@@ -1,8 +1,12 @@
 /* リセットCSS */
-body, h1, h2, h3, p, ul, li {
+body, h1, h2, h3,h4,  ul, li {
     margin: 0;
     padding: 0;
     font-family: 'Comfortaa', cursive;
+    
+}
+p{
+    font-family: 'Noto Sans JP', sans-serif;
 }
 
 body {
@@ -353,5 +357,110 @@ a[target=_blank]{
 /*I'll decide*/
 #Illdecide
 {
-    background-color: aqua;
+    background-color: white;
+}
+
+.decide-top
+{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+}
+#decide-logo
+{
+    text-align: center;
+    padding:30%,10%;
+    margin-top: 30%;
+}
+#decide-smp
+{
+    text-align: center;
+}
+#decide-p
+{
+    text-align: center;
+    padding:30%,10%;
+
+    font-size: small;
+}
+
+#decide-contents_2/*制作期間など*/
+{
+    text-align: left;
+    font-size:small
+}
+
+.decide-process
+{
+    text-align: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+}
+.decide-process2
+{
+    text-align: center;
+    display: grid;
+    grid-template-columns: 40% 20% 40%;
+    grid-template-rows: auto;
+}
+.decide-middle
+{
+    text-align: center;
+
+}
+.decide-bottom
+{
+    text-align: center;
+
+}
+
+/*AisekiR*/
+.aisekir_btn {
+	position: relative;
+	width: 100%;
+	height: 500px;
+	margin: 0 auto;
+	display: block;
+	/*border-radius: 12px;*/
+	overflow: hidden;
+	cursor: pointer;
+}
+.aisekir_btn img {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+	width: 100%;
+	display: block;
+	-webkit-transition: .4s ease-in-out;
+	transition: .4s ease-in-out;
+}
+.aisekir_btn:hover img:nth-of-type(2) {
+	opacity: 0;
+}
+
+/*School*/
+#School
+{
+    background-color: #26c0b1;
+}
+.School-top
+{
+    display: grid;
+    grid-template-columns: 30% 70%;
+    grid-template-rows: auto;
+    grid-gap: 0px;
+}
+
+#School-logo
+{
+    text-align: center;
+    margin-top: 10%;
+}
+#School-smp
+{
+    text-align: center;
+    padding:0%,0%;
 }
