--- a/docs/smstyles.css
+++ b/docs/smstyles.css
@@ -28,7 +28,7 @@ header
 }
 .top-logo a{
     text-decoration:none;
-    color: deeppink;
+    color: rgb(0, 90, 208);
 }
 .top-nav {
     float: right;
@@ -147,7 +147,7 @@ footer {
 
 #scroll-to-top-btn
 {
-    background-color: #f7fefd;
+    background-color: snow;
     /*bottom: 100px;*/
     height: auto;
     width: auto;
@@ -192,7 +192,7 @@ footer {
 }
 
 a[target=_blank]{
-    color: deeppink;
+  color: rgb(0, 90, 208);
     text-decoration:none;
 	padding-right: 20px;
 	background: url(./images/icon_blank.png) right center/11px auto no-repeat;
@@ -419,7 +419,7 @@ opacity: 1;/*選択されているものは透過しない*/
 /*decide*/
 #Illdecide
 {
-  background: linear-gradient(180deg, #2eb0ff,snow);
+  background-color: snow;
 }
 .decide-top
 {
@@ -429,7 +429,7 @@ opacity: 1;/*選択されているものは透過しない*/
 }
 #decide-logo img
 {
-  padding:30%,10%;
+  text-align: center;
   margin-top: 30%;
 }
 #decide-logo img
@@ -440,6 +440,7 @@ opacity: 1;/*選択されているものは透過しない*/
 #decide-logo p
 {
   font-size: 10px;
+  display: none;
 }
 #decide-smp img
 {
@@ -452,4 +453,42 @@ opacity: 1;/*選択されているものは透過しない*/
 {
   text-align: left;
   font-size:xx-small;
+}
+
+/*AisekiR*/
+.aisekir_btn {
+	position: relative;
+	width: 100%;
+	height: 300px;
+	margin: 0 auto;
+	display: block;
+	/*border-radius: 12px;*/
+	overflow: hidden;
+	cursor: pointer;
+}
+.aisekir_btn img {
+	position: absolute;
+	top: 40%;
+	left: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+	width: 100%;
+	display: block;
+	-webkit-transition: .4s ease-in-out;
+	transition: .4s ease-in-out;
+}
+.aisekir_btn:hover img:nth-of-type(2) {
+	opacity: 0;
+}
+
+
+#School-logo img
+{
+  width: 50%;
+  height: auto;
+}
+
+#data p
+{
+  font-size: 10px;
 }
